# gui

./: .gitignore  Makefile  Readme.md  calculator.py  pyproject.toml  requirements.txt  setup.cfg
calculator/: calculator.py
pong/: main.py  pong.kv
wisdom/: main.py  quotes.py  wisdom.kv
